// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если нет папки дергает meta c правильными параметрами 1`] = `
Array [
  Array [
    "/folders/create",
    Object {
      "name": "архив",
      "symbol": "archive",
    },
  ],
  Array [
    "/complex_move",
    Object {
      "dest_fid": "42",
      "mids": "1,2,3",
    },
  ],
]
`;

exports[`если папка есть с локализованным названием дергает mops c правильными параметрами 1`] = `
Array [
  Array [
    "/folders/update_symbol",
    Object {
      "fid": "42",
      "symbol": "archive",
    },
  ],
  Array [
    "/complex_move",
    Object {
      "dest_fid": "42",
      "tids": "41,42,43",
    },
  ],
]
`;

exports[`если папка есть с названием Archive дергает mops c правильными параметрами 1`] = `
Array [
  Array [
    "/folders/update_symbol",
    Object {
      "fid": "146",
      "symbol": "archive",
    },
  ],
  Array [
    "/complex_move",
    Object {
      "dest_fid": "146",
      "tids": "41,42,43",
    },
  ],
]
`;
